Reuse bounded timing calculations across highlight and export batches